# TGrad

./: Cargo.toml
src/: main.rs
src/endpoints/: mod.rs
src/grads/: graduation_option.rs  mod.rs  modality.rs  status.rs
src/persons/: mod.rs  person.rs  person_type.rs
