[package]
name = "t_grad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["json"] }
color-eyre = "0.6.3"
dotenv = "0.15.0"
serde = "1.0.203"
serde_json = "1.0.117"
surrealdb = "1.5.3"
tokio = "1.38.0"
