[package]
name = "t_grad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async_once = "0.2.6"
axum = { version = "0.7.5", features = ["json"] }
chrono = { version = "0.4.38", features = ["serde"] }
color-eyre = "0.6.3"
dotenvy = "0.15.7"
env_logger = "0.11.3"
lazy_static = "1.5.0"
log = "0.4.21"
serde = "1.0.203"
serde_json = "1.0.117"
surrealdb = "1.5.3"
tokio = "1.38.0"
tower-http = { version = "0.5.2", features = ["fs"] }
